# claudepad

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: bump-version.sh
src/: commands.ts  main.ts  quick-open.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_view.rs  files.rs  lib.rs  main.rs  new_window.rs  pty.rs
src/editor/: editor-manager.ts  editor-pane.ts  markdown-editor.ts  markdown-preview.ts  milkdown-editor.ts
src/explorer/: file-explorer.ts
src/layout/: splitter.ts
src/search/: global-search.ts
src/terminal/: terminal-manager.ts  terminal-tab.ts
